add_subdirectory(Common)
add_subdirectory(MOHLevelViewer)
add_subdirectory(MOHModelViewer)
add_subdirectory(RSCExtractor)
add_subdirectory(TIMExtractor)
add_subdirectory(VABExtractor)


# pvs_studio_add_target(TARGET Medal-Of-Honor-PSX.Analyze
#                       ANALYZE ${PROJECT_NAME}
#                       OUTPUT FORMAT errorfile
#                       LOG ${PROJECT_NAME}.err)
